[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidress-mcp"
version = "0.2.2"
description = "MCP server for the Aidress AI agent trust registry"
readme = "README_MCP.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mehul Vig" },
    { name = "Kabir Sadani" },
]
keywords = ["mcp", "ai-agents", "trust", "registry", "aidress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Aidress-ai/Aidress"
Documentation = "https://github.com/Aidress-ai/Aidress#mcp-server"

[project.scripts]
aidress-mcp = "aidress_mcp:main"

[tool.hatch.build.targets.sdist]
include = ["aidress_mcp.py", "README_MCP.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["aidress_mcp.py"]
